force-app/main/default/objects/Order__c/fields/Lower_Min_Price_Number__c.field-meta.xml
<CustomField>
    <fullName>Lower_Min_Price_Number__c</fullName>
    <label>Lower Min Price Number</label>
    <summaryFilterItems>
        <field>Order_Item__c.Lower_Min_Price__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Order_Item__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Normal Product</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>