force-app/main/default/objects/Order__c/fields/Manage_Order_Item_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Manage_Order_Item_Disabled__c</fullName>
    <description>Used for dynamic form to control button</description>
    <formula>TEXT( Order_type__c )  = &apos;ZARA&apos;  &amp;&amp;  Auto_Issue_Consignment__c  &amp;&amp;  TEXT( Status__c )  = &apos;Draft&apos;</formula>
    <label>Manage Order Item Disabled</label>
    <type>Checkbox</type>
</CustomField>