force-app/main/default/objects/Order__c/fields/Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Margin_Rate__c</fullName>
    <formula>IF(
OR(TEXT(Deliver_Plant__c)=&apos;3011&apos;,TEXT(Deliver_Plant__c)=&apos;3020&apos;),
(Total_Margin__c / Total_Cash_Price__c ),
				IF(
								TEXT(Order_type__c)=&apos;ZFD&apos;,
								0,
								(Total_Margin__c / Total_Price__c )
								
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>