force-app/main/default/objects/Order__c/fields/Max_Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Overdue_Days__c</fullName>
    <label>Max Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>