force-app/main/default/objects/Order__c/fields/Max_Price_Rate__c.field-meta.xml
<CustomField>
    <fullName>Max_Price_Rate__c</fullName>
    <label>Max Price Rate</label>
    <summarizedField>Order_Item__c.Price_Rate_Developer__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Item__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Normal Product</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>