force-app/main/default/objects/Order__c/fields/MDG_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>MDG_Customer_Code__c</fullName>
    <formula>Customer__r.MDG_Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDG Customer Code</label>
    <type>Text</type>
</CustomField>