force-app/main/default/objects/Order__c/fields/Need_HQ_Approve__c.field-meta.xml
<CustomField>
    <fullName>Need_HQ_Approve__c</fullName>
    <formula>(Over_Credit_Line_Percent__c*100&gt;10 &amp;&amp;  TEXT(Customer_Sales_Info__r.Acct_Assmt_Grp_Cust__c) = &apos;02&apos;) || (Max_Overdue_Days__c&gt;=31 &amp;&amp; Overdue_Amount__c&gt;=5000 &amp;&amp; TEXT(Customer_Sales_Info__r.Acct_Assmt_Grp_Cust__c) = &apos;02&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need HQ Approve</label>
    <type>Checkbox</type>
</CustomField>