force-app/main/default/objects/Order__c/fields/needGenerateZARA__c.field-meta.xml
<CustomField>
    <fullName>needGenerateZARA__c</fullName>
    <label>needGenerateZARA</label>
    <summaryFilterItems>
        <field>Delivery_Note__c.Stock_Aging_CountdownBatch__c</field>
        <operation>lessOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Delivery_Note__c.Remain_Quantity__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Delivery_Note__c.Auto_Issue_Consignment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Delivery_Note__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>