force-app/main/default/objects/Order__c/fields/Negative_Item__c.field-meta.xml
<CustomField>
    <fullName>Negative_Item__c</fullName>
    <label>Negative Gross Margin Item Count</label>
    <summaryFilterItems>
        <field>Order_Item__c.Margin_Rate__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>