force-app/main/default/objects/Order__c/fields/Not_Show_Margin__c.field-meta.xml
<CustomField>
    <fullName>Not_Show_Margin__c</fullName>
    <formula>OR(TEXT(Order_type__c)=&apos;ZAR2&apos;,TEXT(Order_type__c)=&apos;ZARA&apos;,TEXT(Order_type__c)=&apos;ZARF&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Show Margin</label>
    <type>Checkbox</type>
</CustomField>