force-app/main/default/objects/Order__c/fields/NotificationClose__c.field-meta.xml
<CustomField>
    <fullName>NotificationClose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already Sent Closure Notification</label>
    <type>Checkbox</type>
</CustomField>