force-app/main/default/objects/Order__c/fields/Old_Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Old_Sales_Type__c</fullName>
    <label>Old Sales Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>