force-app/main/default/objects/Order__c/fields/Order_Amount_Guide__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_Guide__c</fullName>
    <label>Guide Price Amount</label>
    <summarizedField>Order_Item__c.Order_Item_Amount_Guide__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>