force-app/main/default/objects/Order__c/fields/Order_Amount_Report__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_Report__c</fullName>
    <formula>CASE(Status__c,
&quot;Close&quot;, Invoice_Amount_Net__c,
&quot;Approved&quot;, Total_Amount__c,
0)
*
IF(CONTAINS(&apos;ZAR3,ZAR8,ZRE,ZRE1,ZREQ,ZR1Q,ZARX,ZMX2,ZMX3,ZARA,ZARF,ZARH,ZAR2&apos;,TEXT(Order_type__c)), -1, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amount Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>