force-app/main/default/objects/Order__c/fields/Order_Amount_Report_USD__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_Report_USD__c</fullName>
    <formula>Order_Amount_Report__c/Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amount Report (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>