force-app/main/default/objects/Order__c/fields/Order_Amount_Without_Commission__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_Without_Commission__c</fullName>
    <label>Order Amount Without Commission</label>
    <summarizedField>Order_Item__c.Order_Item_Amount_Without__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>