force-app/main/default/objects/Order__c/fields/Order_Change__c.field-meta.xml
<CustomField>
    <fullName>Order_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Change</label>
    <type>Checkbox</type>
</CustomField>