force-app/main/default/objects/Order__c/fields/Order_Closed_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Closed_Status__c</fullName>
    <formula>IF( Close_Item_Count__c!=0,IF(Close_Item_Count__c == Order_Item_Number__c,&apos;Closed&apos;,&apos;Partially Closed&apos;),&apos;Not Closed&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Closure Status</label>
    <type>Text</type>
</CustomField>