force-app/main/default/objects/Order__c/fields/Order_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Number__c</fullName>
    <label>Order Item Count</label>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>