force-app/main/default/objects/Order__c/fields/Order_Reason__c.field-meta.xml
<CustomField>
    <fullName>Order_Reason__c</fullName>
    <label>Order Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Order_type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>MX1</fullName>
                <label>MX1	Early payment</label>
            </value>
            <value>
                <fullName>MX2</fullName>
                <label>MX2	Incomplete product</label>
            </value>
            <value>
                <fullName>Z11</fullName>
                <label>Z11 Rebate</label>
            </value>
            <value>
                <fullName>Z99</fullName>
                <label>Z99 Other reason</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>001	Sales call</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>002	Trade fair sales activity</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>003	Television commercial</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>004	Customer recommendation</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>005	Newspaper advertisement</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>006	Excellent price</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>007	Fast delivery</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>008	Good service</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>009	Accelerated Return</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>100	Price difference: price was too high</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>101	Poor quality</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>102	Damaged in transit</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>103	Quantity discrepancy</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>104	Material ruined</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>105	Free of charge sample</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>200	Price difference: price was too low</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>300	Downpayment request</label>
            </value>
            <value>
                <fullName>EDI</fullName>
                <label>EDI	Self-billing proced.</label>
            </value>
            <value>
                <fullName>JDR</fullName>
                <label>JDR	DRM Claims - Prc. Prot, ShpDeb, BillUp</label>
            </value>
            <value>
                <fullName>PNS	S2K</fullName>
                <label>PNS	S2K: PN status inquiry</label>
            </value>
            <value>
                <fullName>POS	S2K</fullName>
                <label>POS	S2K: PO status inquiry</label>
            </value>
            <value>
                <fullName>QBI	SBWAP</fullName>
                <label>QBI	SBWAP: Difference Clearing (Qty/Value)</label>
            </value>
            <value>
                <fullName>QOI	SBWAP</fullName>
                <label>QOI	SBWAP: New Open Items (Quantity(Value)</label>
            </value>
            <value>
                <fullName>VBI	SBWAP</fullName>
                <label>VBI	SBWAP: Difference Clearing (Value)</label>
            </value>
            <value>
                <fullName>VOI	SBWAP</fullName>
                <label>VOI	SBWAP: New Open Items (Value)</label>
            </value>
            <value>
                <fullName>Z01</fullName>
                <label>Z01	Incorrect goods received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>