force-app/main/default/objects/Order__c/fields/Order_type__c.field-meta.xml
<CustomField>
    <fullName>Order_type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Order_Type</valueSetName>
    </valueSet>
</CustomField>