force-app/main/default/objects/Order__c/fields/Over_Credit_Line_Percent__c.field-meta.xml
<CustomField>
    <fullName>Over_Credit_Line_Percent__c</fullName>
    <formula>IF(Customer_Credit_Line__c=0,0,Exceeded_Credit_Limit_USD__c/ Customer_Credit_Line__c)</formula>
    <label>Over Credit Line Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>