force-app/main/default/objects/Order__c/fields/Overdue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Amount__c</fullName>
    <label>Overdue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>