force-app/main/default/objects/Order__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T</fullName>
                <label>T Transferencia Bancaria</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D Condonacion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>