force-app/main/default/objects/Order__c/fields/Payment_Term_Longer__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Longer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Term Longer than Default</label>
    <type>Checkbox</type>
</CustomField>