force-app/main/default/objects/Order__c/fields/Payment_Terms_Over_180__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Over_180__c</fullName>
    <formula>CONTAINS(&quot;AR11,AR14,AR15&quot;,TEXT(Terms_Of_Payment__c))</formula>
    <label>Payment Term over 180 Days</label>
    <type>Checkbox</type>
</CustomField>