force-app/main/default/objects/Order__c/fields/Percentage_Of_The_Original_Order__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Of_The_Original_Order__c</fullName>
    <formula>Order_Amount_USD__c / Reference_Order__r.Order_Amount_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Of The Original Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>