force-app/main/default/objects/Order__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Price_Book__c.Currency__c</field>
            <operation>equals</operation>
            <valueField>$Source.Currency__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Price_Book__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>