force-app/main/default/objects/Order__c/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <label>Profit Center</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Profit_Center</valueSetName>
    </valueSet>
</CustomField>