force-app/main/default/objects/Order__c/fields/Quality_Change_Item__c.field-meta.xml
<CustomField>
    <fullName>Quality_Change_Item__c</fullName>
    <label>Quantity Changing Item Count</label>
    <summaryFilterItems>
        <field>Order_Item__c.New_Quantity__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>