force-app/main/default/objects/Order__c/fields/Quotes__c.field-meta.xml
<CustomField>
    <fullName>Quotes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Quotation</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>