force-app/main/default/objects/Order__c/fields/Reason_Describe__c.field-meta.xml
<CustomField>
    <fullName>Reason_Describe__c</fullName>
    <label>Reason Describe</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>