force-app/main/default/objects/Order__c/fields/RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordType Name</label>
    <type>Text</type>
</CustomField>