force-app/main/default/objects/Order__c/fields/Reference_Order__c.field-meta.xml
<CustomField>
    <fullName>Reference_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Reference Order</relationshipLabel>
    <relationshipName>Related_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>