force-app/main/default/objects/Order__c/fields/Reference_Order_Margin_Level__c.field-meta.xml
<CustomField>
    <fullName>Reference_Order_Margin_Level__c</fullName>
    <formula>Reference_Order__r.Total_Margin_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Order Margin Level</label>
    <type>Text</type>
</CustomField>