force-app/main/default/objects/Order__c/fields/Reference_Order_Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Reference_Order_Margin_Rate__c</fullName>
    <formula>Reference_Order__r.Margin_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Order Margin Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>