force-app/main/default/objects/Order__c/fields/Reference_Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Reference_Order_Owner__c</fullName>
    <formula>Reference_Order__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Order Owner</label>
    <type>Text</type>
</CustomField>