force-app/main/default/objects/Order__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <defaultValue>$User.Sales_Org_Text__c</defaultValue>
    <label>Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Org</valueSetName>
    </valueSet>
</CustomField>