force-app/main/default/objects/Order__c/fields/SAP_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Created_Date__c</fullName>
    <label>SAP Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>