force-app/main/default/objects/Order__c/fields/SAP_Order__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP Created Order</label>
    <type>Checkbox</type>
</CustomField>