force-app/main/default/objects/Order__c/fields/SAP_Order_Code2__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Code2__c</fullName>
    <externalId>true</externalId>
    <label>SAP Order Number 2</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>