force-app/main/default/objects/Order__c/fields/SAP_Order_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>