force-app/main/default/objects/Order__c/fields/SAP_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Update_Status__c</fullName>
    <label>SAP Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>