force-app/main/default/objects/Order__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.MDG_Customer_Code__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order (Ship To)</relationshipLabel>
    <relationshipName>Order2</relationshipName>
    <type>Lookup</type>
</CustomField>