force-app/main/default/objects/Order__c/fields/Shipping_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Text__c</fullName>
    <formula>IF(OR(ISNULL(Customer_Shipping_Address__c),ISBLANK(Customer_Shipping_Address__c)),Ship_To__r.Shipping_Address__c,Customer_Shipping_Address__r.Direction__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address Text</label>
    <type>Text</type>
</CustomField>