force-app/main/default/objects/Order__c/fields/Show_More__c.field-meta.xml
<CustomField>
    <fullName>Show_More__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show More</label>
    <type>Checkbox</type>
</CustomField>