force-app/main/default/objects/Order__c/fields/Show_Notification__c.field-meta.xml
<CustomField>
    <fullName>Show_Notification__c</fullName>
    <formula>NOT(AND(
    TEXT(Sync_Status__c)=&apos;Synchronized&apos;,
    
    NOT(Locked_in_SAP__c)
    ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Notification</label>
    <type>Checkbox</type>
</CustomField>