force-app/main/default/objects/Order__c/fields/Source_Order__c.field-meta.xml
<CustomField>
    <fullName>Source_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order (Source Order)</relationshipLabel>
    <relationshipName>SourceOrders</relationshipName>
    <type>Lookup</type>
</CustomField>