force-app/main/default/objects/Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approving</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
                <isActive>false</isActive>
                <label>Invoiced</label>
            </value>
            <value>
                <fullName>Paid</fullName>
                <isActive>false</isActive>
                <label>Paid</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
                <isActive>false</isActive>
                <label>Shipped</label>
            </value>
            <value>
                <fullName>To be shipped</fullName>
                <isActive>false</isActive>
                <label>To be shipped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>