force-app/main/default/objects/Order__c/fields/Stock_Aging_Limit__c.field-meta.xml
<CustomField>
    <fullName>Stock_Aging_Limit__c</fullName>
    <label>Stock Aging Limit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>