force-app/main/default/objects/Order__c/fields/Submit_Days__c.field-meta.xml
<CustomField>
    <fullName>Submit_Days__c</fullName>
    <formula>TODAY() - Submit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>