force-app/main/default/objects/Order__c/fields/Submit_Manager__c.field-meta.xml
<CustomField>
    <fullName>Submit_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submit Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Submit_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>