force-app/main/default/objects/Order__c/fields/Submit_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Submit_Profile_Name__c</fullName>
    <label>Submit Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>