force-app/main/default/objects/Order__c/fields/Sync_Failure_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Sync_Failure_Reasons__c</fullName>
    <label>Sync Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>