force-app/main/default/objects/Order__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not synchronized</fullName>
            </value>
            <value>
                <fullName>Synchronization error</fullName>
            </value>
            <value>
                <fullName>Synchronized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>