force-app/main/default/objects/Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Order Amount</label>
    <summarizedField>Order_Item__c.Actual_Order_Item_Amount_w_o_tax__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>