force-app/main/default/objects/Order__c/fields/Total_Amount_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Tax__c</fullName>
    <formula>Total_Tax__c + Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>