force-app/main/default/objects/Order__c/fields/Total_Cash_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Price__c</fullName>
    <label>Total Cash Price</label>
    <summarizedField>Order_Item__c.Actual_Total_Cash_Price__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>