force-app/main/default/objects/Order__c/fields/Total_Estimate_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimate_Cost__c</fullName>
    <label>Total Estimate Cost</label>
    <summarizedField>Order_Item__c.Actual_Total_Estimate_Cost__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>