force-app/main/default/objects/Order__c/fields/Total_Estimate_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimate_Margin__c</fullName>
    <formula>Total_Price__c - Total_Estimate_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimate Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>