force-app/main/default/objects/Order__c/fields/Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin__c</fullName>
    <formula>IF(
    OR(TEXT(Deliver_Plant__c)=&apos;3011&apos;,TEXT(Deliver_Plant__c)=&apos;3020&apos;),
    Total_Cash_Price__c-Total_Cost__c,
    Total_Price__c-Total_Cost__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>